Update GitHub Actions

--- a/.github/workflows/develop-docker-image.yml
+++ b/.github/workflows/develop-docker-image.yml
@@ -26,12 +26,15 @@ jobs:
       - name: Build the Docker image
         run: |
           ./gradlew printVersion
+          ./gradlew printProjectName
           VERSION=$(./gradlew -q printVersion)
-          IMAGE_TAG="blockchain-connector:v$VERSION-SNAPSHOT"
+          PROJECT_NAME=$(./gradlew -q printComponentName)
+          IMAGE_TAG="$PROJECT_NAME:v$VERSION$SUFFIX"
           docker build . --file Dockerfile --tag $DOCKER_HUB_CLIENT_NAME/$IMAGE_TAG
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          docker push &DOCKER_HUB_CLIENT_NAME/$IMAGE_TAG
+          docker push $DOCKER_HUB_CLIENT_NAME/$IMAGE_TAG
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_HUB_CLIENT_NAME: ${{ secrets.DOCKER_HUB_CLIENT_NAME }}
+          SUFFIX: -SNAPSHOT
