--- a/build.gradle
+++ b/build.gradle
@@ -126,3 +126,9 @@ tasks.register('printVersion') {
 		println version
 	}
 }
+
+tasks.register('printProjectName') {
+	doLast {
+		println rootProject.name
+	}
+}
