--- a/.github/workflows/develop-docker-image.yml
+++ b/.github/workflows/develop-docker-image.yml
@@ -28,7 +28,7 @@ jobs:
           ./gradlew printVersion
           ./gradlew printProjectName
           VERSION=$(./gradlew -q printVersion)
-          PROJECT_NAME=$(./gradlew -q printComponentName)
+          PROJECT_NAME=$(./gradlew -q printProjectName)
           IMAGE_TAG="$PROJECT_NAME:v$VERSION$SUFFIX"
           docker build . --file Dockerfile --tag $DOCKER_HUB_CLIENT_NAME/$IMAGE_TAG
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
