Update GitHub Actions for prod purposes

--- a/.github/workflows/prod-docker-image.yml
+++ b/.github/workflows/prod-docker-image.yml
@@ -2,9 +2,9 @@ name: DockerHub Image CI Prod
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main" ]
 
 jobs:
   build:
