--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,28 +25,22 @@ jobs:
 
       - name: Set build status and create deployment
         run: |
-          const status = process.env.BUILD_STATUS;
-          core.setOutput('build_status', status);
-
-          if (status !== 'success') {
-            if (github && context.repo) {
-              const { data } = await github.repos.createDeployment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                ref: process.env.GITHUB_SHA,
-                environment: 'test',
-                auto_merge: false,
-              });
-
-              await github.repos.createDeploymentStatus({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                deployment_id: data.id,
-                state: 'failure',
-              });
-            } else {
-              console.error('Error: github or context.repo is undefined.');
-            }
-          }
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "BUILD_STATUS=success" >> $GITHUB_ENV
+          
+          if [ "$BUILD_STATUS" != "success" ]; then
+            if [ -n "$GITHUB_TOKEN" ] && [ -n "$GITHUB_REPOSITORY" ]; then
+              DEPLOYMENT_ID=$(curl -s -X POST \
+                -H "Authorization: token $GITHUB_TOKEN" \
+                -H "Accept: application/vnd.github.v3+json" \
+                "https://api.github.com/repos/$GITHUB_REPOSITORY/deployments" \
+                -d '{"ref": "'"$GITHUB_SHA"'", "environment": "test", "auto_merge": false}' | jq -r '.id')
+          
+              curl -s -X POST \
+                -H "Authorization: token $GITHUB_TOKEN" \
+                -H "Accept: application/vnd.github.v3+json" \
+                "https://api.github.com/repos/$GITHUB_REPOSITORY/deployments/$DEPLOYMENT_ID/statuses" \
+                -d '{"state": "failure"}'
+            else
+              echo "Error: GITHUB_TOKEN or GITHUB_REPOSITORY is not set."
+            fi
+          fi
