--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,23 +24,26 @@ jobs:
       - name: Make Gradlew Executable
         run: chmod +x ./gradlew
 
-      - name: Set build status and create deployment
-        run: |
-          echo "BUILD_STATUS=success" >> $GITHUB_ENV
-          
-          if [ "$BUILD_STATUS" != "success" ]; then
-            if [ -n "$GITHUB_TOKEN" ] && [ -n "$GITHUB_REPOSITORY" ]; then
-              DEPLOYMENT_ID=$(curl -s -X POST \
-                -H "Authorization: token $GITHUB_TOKEN" \
-                -H "Accept: application/vnd.github.v3+json" \
-                "https://api.github.com/repos/$GITHUB_REPOSITORY/deployments" \
-                -d '{"ref": "'"$GITHUB_SHA"'", "environment": "test", "auto_merge": false}' | jq -r '.id')
-          
-              curl -s -X POST \
-                -H "Authorization: token $GITHUB_TOKEN" \
-                -H "Accept: application/vnd.github.v3+json" \
-                "https://api.github.com/repos/$GITHUB_REPOSITORY/deployments/$DEPLOYMENT_ID/statuses" \
-                -d '{"state": "failure"}'
-            else
-              echo "Error: GITHUB_TOKEN or GITHUB_REPOSITORY is not set."
-            fi
+      - name: Build
+        id: build
+        run: ./gradlew build
+
+      - name: Set success build status
+        id: set_build_status
+        if: ${{ success() }}
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const status = process.env.BUILD_STATUS || 'success';
+            core.setOutput('build_status', status);
+
+      - name: Set failure build status
+        id: set_build_status
+        if: ${{ failure() }}
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const status = process.env.BUILD_STATUS || 'failure';
+            core.setOutput('build_status', status);
