--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -9,10 +9,12 @@ on:
 jobs:
 
   build:
+    name: build-project
     runs-on: ubuntu-latest
     strategy:
       matrix:
         java-version: [ '17' ]
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -30,13 +32,18 @@ jobs:
         run: ./gradlew build
 
   deploy:
+    name: deploy-project
     needs: build
+    if: success()
     runs-on: ubuntu-latest
     environment: test
-    if: success()
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Make Gradlew Executable
+        run: chmod +x ./gradlew
 
       - name: Build and Push docker image
         run: |
