--- a/.github/workflows/build-deploy-prod.yml
+++ b/.github/workflows/build-deploy-prod.yml
@@ -8,12 +8,43 @@ on:
 
 jobs:
 
+  analyze:
+    name: analyze
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'java-kotlin' ]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
+
   build:
     name: build-project
+    if: success()
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java-version: [ '17' ]
+    environment: prod
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -22,7 +53,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
-          java-version: ${{ matrix.java-version }}
+          java-version: '17'
 
       - name: Make Gradlew Executable
         run: chmod +x ./gradlew
@@ -33,12 +64,19 @@ jobs:
   deploy:
     name: deploy-project
     needs: build
-    runs-on: ubuntu-latest
-    environment: test
     if: success()
+    runs-on: ubuntu-latest
+    environment: prod
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Make Gradlew Executable
         run: chmod +x ./gradlew
@@ -49,7 +87,7 @@ jobs:
           ./gradlew printProjectName
           VERSION=$(./gradlew -q printVersion)
           PROJECT_NAME=$(./gradlew -q printProjectName)
-          IMAGE_TAG="$PROJECT_NAME:v$VERSION"
+          IMAGE_TAG="$PROJECT_NAME:v$VERSION$SUFFIX"
           docker build . --file Dockerfile --tag $DOCKER_HUB_CLIENT_NAME/$IMAGE_TAG
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
           docker push $DOCKER_HUB_CLIENT_NAME/$IMAGE_TAG
@@ -57,3 +95,4 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_HUB_CLIENT_NAME: ${{ secrets.DOCKER_HUB_CLIENT_NAME }}
+          SUFFIX: -SNAPSHOT
