--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -44,9 +44,6 @@ jobs:
     if: success()
     runs-on: ubuntu-latest
     environment: test
-    strategy:
-      matrix:
-        java-version: [ '17' ]
 
     steps:
       - name: Checkout Repository
@@ -56,7 +53,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
-          java-version: ${{ matrix.java-version }}
+          java-version: '17'
 
       - name: Make Gradlew Executable
         run: chmod +x ./gradlew
@@ -70,9 +67,6 @@ jobs:
     if: success()
     runs-on: ubuntu-latest
     environment: test
-    strategy:
-      matrix:
-        java-version: [ '17' ]
 
     steps:
       - name: Checkout Repository
@@ -82,7 +76,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
-          java-version: ${{ matrix.java-version }}
+          java-version: '17'
 
       - name: Make Gradlew Executable
         run: chmod +x ./gradlew
