--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'es.in2'
-version = '1.1.0'
+version = '2.0.0'
 
 java {
 	sourceCompatibility = '17'
@@ -42,15 +42,12 @@ repositories {
 }
 
 dependencies {
-	// Spring Boot dependencies
+	// Spring
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-
-	// Validation
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// JSON
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
@@ -64,15 +61,6 @@ dependencies {
 	// Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
 
-	// OpenAPI
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
-
-	// Persistence
-	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	implementation 'org.postgresql:r2dbc-postgresql'
-	implementation 'org.postgresql:postgresql'
-	implementation 'org.flywaydb:flyway-core:9.16.3'
-
 	// Logback
 	implementation 'ch.qos.logback:logback-classic:1.4.11'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
@@ -81,13 +69,15 @@ dependencies {
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'io.micrometer:micrometer-registry-prometheus:1.11.5'
 
+	// Persistence
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'org.postgresql:r2dbc-postgresql'
+	implementation 'org.postgresql:postgresql'
+	implementation 'org.flywaydb:flyway-core:9.16.3'
+
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-	testImplementation 'org.mockito:mockito-core:3.12.4'
-	testImplementation 'io.mockk:mockk:1.13.5'
+	testImplementation 'io.projectreactor:reactor-test:3.6.0'
 }
 
 tasks.named('compileJava') {
@@ -113,9 +103,7 @@ tasks.jacocoTestReport {
 					'**/configuration/**',
 					'**/domain/**',
 					'**/exception/**',
-					'**/repository/**',
-					'**/utils/**',
-
+					'**/repository/**'
 			])
 		}))
 	}
