--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ group = 'es.in2'
 version = '2.0.0'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
 }
 
 jacoco {
