Update SonarCloud configurations.

--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -76,7 +76,8 @@ jobs:
           args:
             -Dsonar.projectKey=in2workspace_blockchain-connector
             -Dsonar.organization=in2workspace
-            -Dsonar.scm.provider=git
+            -Dsonar.scm.disabled=true
+#            -Dsonar.scm.provider=git
             -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 
   deploy:
