Update SonarCloud configurations.

--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -59,7 +59,8 @@ jobs:
         run: ./gradlew build
 
       - name: Verify Jacoco Report
-        run: ls -R build/reports/jacoco/test/
+        run: |
+          echo "Jacoco Report Location: $(pwd)/build/reports/jacoco/test/"
 
   sonarcloud:
     name: sonarcloud
