--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -62,15 +62,6 @@ jobs:
         run: |
           echo "Jacoco Report Location: $(pwd)/build/reports/jacoco/test/"
 
-  sonarcloud:
-    name: sonarcloud
-    needs: build
-    if: success()
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-
-    steps:
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
         env:
@@ -82,6 +73,27 @@ jobs:
             -Dsonar.organization=in2workspace
             -Dsonar.scm.disabled=true
             -Dsonar.coverage.jacoco.xmlReportPaths=/home/runner/work/blockchain-connector/blockchain-connector/build/reports/jacoco/test/jacocoTestReport.xml
+
+#  sonarcloud:
+#    name: sonarcloud
+#    needs: build
+#    if: success()
+#    runs-on: ubuntu-latest
+#    permissions:
+#      pull-requests: read
+#
+#    steps:
+#      - name: Analyze with SonarCloud
+#        uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        with:
+#          args:
+#            -Dsonar.projectKey=in2workspace_blockchain-connector
+#            -Dsonar.organization=in2workspace
+#            -Dsonar.scm.disabled=true
+#            -Dsonar.coverage.jacoco.xmlReportPaths=/home/runner/work/blockchain-connector/blockchain-connector/build/reports/jacoco/test/jacocoTestReport.xml
 
   deploy:
     name: deploy-project
