--- a/.github/workflows/build-deploy-test.yml
+++ b/.github/workflows/build-deploy-test.yml
@@ -81,7 +81,7 @@ jobs:
             -Dsonar.projectKey=in2workspace_blockchain-connector
             -Dsonar.organization=in2workspace
             -Dsonar.scm.disabled=true
-            -Dsonar.coverage.jacoco.xmlReportPaths=build/jacocoHtml/jacoco.xml
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/jacocoHtml/
 
   deploy:
     name: deploy-project
