--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.1.4'
-	id 'io.spring.dependency-management' version '1.1.3'
-	id 'jacoco'
-	id 'org.sonarqube' version '4.0.0.2929'
-	id 'checkstyle'
-	id 'org.owasp.dependencycheck' version '8.4.0'
+	id "java"
+	id "org.springframework.boot" version "3.1.4"
+	id "io.spring.dependency-management" version "1.1.3"
+	id "jacoco"
+	id "org.sonarqube" version "4.4.1.3373"
+	id "checkstyle"
+	id "org.owasp.dependencycheck" version "8.4.0"
 }
 
 group = 'es.in2'
@@ -29,6 +29,14 @@ checkstyleMain {
 
 checkstyleTest {
 	source ='src/test/java'
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "in2workspace_blockchain-connector"
+		property "sonar.organization", "in2workspace"
+		property "sonar.host.url", "https://sonarcloud.io"
+	}
 }
 
 configurations {
