--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,16 @@ plugins {
 	id 'org.springframework.boot' version '3.1.4'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'jacoco'
-	id 'org.sonarqube' version '4.0.0.2929'
+	id 'org.sonarqube' version '4.4.1.3373'
 	id 'checkstyle'
 	id 'org.owasp.dependencycheck' version '8.4.0'
 }
 
 group = 'es.in2'
-version = '1.1.0'
+version = '2.0.0'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
 }
 
 jacoco {
@@ -31,6 +31,21 @@ checkstyleTest {
 	source ='src/test/java'
 }
 
+sonar {
+	properties {
+		property "sonar.projectName", "Blockchain Connector"
+		property "sonar.projectKey", "in2workspace_blockchain-connector"
+		property "sonar.organization", "in2workspace"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.coverage.exclusions",
+				"src/main/java/es/in2/blockchainconnector/BlockchainConnectorApplication.java, " +
+				"src/main/java/es/in2/blockchainconnector/configuration/**, " +
+				"src/main/java/es/in2/blockchainconnector/domain/**, " +
+				"src/main/java/es/in2/blockchainconnector/exception/**, " +
+				"src/main/java/es/in2/blockchainconnector/repository/**"
+	}
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -42,15 +57,12 @@ repositories {
 }
 
 dependencies {
-	// Spring Boot dependencies
+	// Spring
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-
-	// Validation
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// JSON
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
@@ -64,15 +76,6 @@ dependencies {
 	// Documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
 
-	// OpenAPI
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
-
-	// Persistence
-	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	implementation 'org.postgresql:r2dbc-postgresql'
-	implementation 'org.postgresql:postgresql'
-	implementation 'org.flywaydb:flyway-core:9.16.3'
-
 	// Logback
 	implementation 'ch.qos.logback:logback-classic:1.4.11'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
@@ -81,13 +84,15 @@ dependencies {
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'io.micrometer:micrometer-registry-prometheus:1.11.5'
 
+	// Persistence
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'org.postgresql:r2dbc-postgresql'
+	implementation 'org.postgresql:postgresql'
+	implementation 'org.flywaydb:flyway-core:9.16.3'
+
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-	testImplementation 'org.mockito:mockito-core:3.12.4'
-	testImplementation 'io.mockk:mockk:1.13.5'
+	testImplementation 'io.projectreactor:reactor-test:3.6.0'
 }
 
 tasks.named('compileJava') {
@@ -113,9 +118,7 @@ tasks.jacocoTestReport {
 					'**/configuration/**',
 					'**/domain/**',
 					'**/exception/**',
-					'**/repository/**',
-					'**/utils/**',
-
+					'**/repository/**'
 			])
 		}))
 	}
