--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,17 +4,13 @@ spring:
     name: Blockchain Connector
   main:
     web-application-type: reactive
-  config:
-    import:
-      - classpath:external-config.yml
-      - file:/src/main/resources/external-config.yml
   r2dbc:
-    url: ${DATABASE_URL}
-    username: postgres #user
-    password: postgres #1234
+    url:
+    username:
+    password:
     generate-unique-name: true
   flyway:
-    url: ${FLYWAY_URL}
+    url:
     locations: classpath:db/migrations
 
 # Spring Logging Configuration
@@ -61,3 +57,55 @@ springdoc:
 # Server Configuration
 server:
   port: 8080
+
+# Application Configuration
+openapi:
+  server:
+    url:
+    description:
+  info:
+    title:
+    version:
+    description:
+    termsOfService:
+    license:
+      name:
+      url:
+    contact:
+      email:
+      name:
+      url:
+
+# Operator Configuration
+operator:
+  organizationId:
+
+# DLT Adapter Configuration
+dlt-adapter:
+  domain:
+
+# Blockchain Configuration
+blockchain:
+  rpcAddress:
+  userEthereumAddress:
+  subscription:
+    active:
+    notificationEndpoint:
+    eventTypes:
+
+# Context Broker Configuration
+broker:
+  externalDomain:
+  internalDomain:
+
+# NGSI Subscription Configuration
+ngsi-subscription:
+  notificationEndpoint:
+  entityTypes:
+
+# Broker Adapter Configuration
+broker-adapter:
+  domain:
+  paths:
+    entities:
+    subscriptions:
